--- a/html.html
+++ b/html.html
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>huy raasts đẹp trai và vui tính</h1>
-    <h5>hihi</h5>
+    <h1>Huy đẹp trai hehehe</h1>
+    <h5>ahihi</h5>
     <script src="train.js"></script>
   </body>
 </html>
