--- a/html.html
+++ b/html.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Xin chào các bạn </h1>
+    <h1>HEHE </h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, eveniet nesciunt ab vitae minus quas inventore modi? Voluptas ratione sed, excepturi distinctio laudantium repellendus fugiat est nihil possimus recusandae rem.</p>
     <script src="train.js"> </script>
 </body>
 </html>
